[package]
name = "ckb-mock-tx-types"
description = "CKB mock transaction types"
version = "0.111.0"
license = "MIT"
edition = "2021"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "45104e08c18852260282f23858ce21afae4c9f34" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "45104e08c18852260282f23858ce21afae4c9f34" }
ckb-traits = { git = "https://github.com/nervosnetwork/ckb.git", rev = "45104e08c18852260282f23858ce21afae4c9f34" }
serde = { version = "1.0", features=["derive"] }
