[package]
name = "ckb-mock-tx-types"
description = "CKB mock transaction types"
version = "0.116.1"
license = "MIT"
edition = "2021"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = { package = "ckb-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-jsonrpc-types = { package = "ckb-jsonrpc-types", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
ckb-traits = { package = "ckb-traits", git = "https://github.com/ethanyuan/ckb", branch = "v0.116.1-branch-chain" }
serde = { version = "1.0", features = ["derive"] }
